--- a/dairy/xq/index-demo-2/index.html
+++ b/dairy/xq/index-demo-2/index.html
@@ -68,8 +68,7 @@
   <!-- main-content -->
   <div class="main-content">
     <!-- carousel -->
-
-    <div id="carousel" class="carousel carousel slide carousel-fade" data-ride="carousel">
+    <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carousel" data-slide-to="0" class=""></li>
         <li data-target="#carousel" data-slide-to="1" class=""></li>
@@ -111,14 +110,97 @@
     <div class="about-us">
       <div class="about-inner">
         <b>ABOUT OUR COMPANY</b>
-        <h1>WHAT'S BIZPLUS</h1>
+        <h1>A Plus For Your Business</h1>
         <hr>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum mollitia necessitatibus neque, facilis
           quibusdam reprehenderit? Veritatis voluptas sit esse quo aliquid possimus totam eligendi repellat, quam ipsam
           rerum repellendus necessitatibus.</p>
+        <div class="about-icon">
+          <div class="about-icon-item">
+            <div><img src="./imgs/svg/professional.svg"></div>
+            <b>PROFESSION</b>
+          </div>
+          <div class="about-icon-item">
+            <div><img src="./imgs/svg/highly.svg"></div>
+            <b>EFFICIENT</b>
+          </div>
+          <div class="about-icon-item">
+            <div><img src="./imgs/svg/nice.svg"></div>
+            <b>QUALITY</b>
+          </div>
+        </div>
         <button>LEARN MORE</button>
       </div>
     </div>
+
+
+
+    <!-- new cards -->
+    <div class="cards">
+      <div class="card-title">
+        <h1>OUR WORKS</h1>
+        <i>新着制作実績</i>
+        <hr>
+      </div>
+      <div class="card-inner">
+        <div class="card-list">
+          <div class="card-item">
+            <img src="./imgs/business/business-agency-team-working-on-new-ideas-1080x720.jpg" alt="">
+            <div class="card-box">
+              <div class="box-title">由布院つばめ舎（湯布院）</div>
+              <span class="works-tag">Web広告施策</span>
+            </div>
+          </div>
+          <div class="card-item">
+            <img src="./imgs/business/business-agency-team-working-on-new-ideas-1080x720.jpg" alt="">
+            <div class="card-box">
+              <div class="box-title">由布院つばめ舎（湯布院）</div>
+              <span class="works-tag">Web広告施策</span>
+            </div>
+          </div>
+          <div class="card-item">
+            <img src="./imgs/business/business-agency-team-working-on-new-ideas-1080x720.jpg" alt="">
+            <div class="card-box">
+              <div class="box-title">由布院つばめ舎（湯布院）</div>
+              <span class="works-tag">Web広告施策是是是是是是所所所所所所所所搜索 搜索 </span>
+            </div>
+          </div>
+          <div class="card-item">
+            <img src="./imgs/business/business-agency-team-working-on-new-ideas-1080x720.jpg" alt="">
+            <div class="card-box">
+              <div class="box-title">由布院つばめ舎（湯布院）</div>
+              <span class="works-tag">Web広告施策</span>
+            </div>
+          </div>
+          <div class="card-item">
+            <img src="./imgs/business/business-agency-team-working-on-new-ideas-1080x720.jpg" alt="">
+            <div class="card-box">
+              <div class="box-title">由布院つばめ舎（湯布院）</div>
+              <span class="works-tag">Web広告施策</span>
+            </div>
+          </div>
+          <div class="card-item">
+            <img src="./imgs/business/business-agency-team-working-on-new-ideas-1080x720.jpg" alt="">
+            <div class="card-box">
+              <div class="box-title">由布院つばめ舎（湯布院）</div>
+              <span class="works-tag">Web広告施策</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- <div class="card-inner">
+        <ul class="card-list">
+          <li class="card-item"></li>
+          <li class="card-item"></li>
+          <li class="card-item"></li>
+          <li class="card-item"></li>
+          <li class="card-item"></li>
+          <li class="card-item"></li>
+        </ul>
+      </div> -->
+    </div>
+
+
     <!-- Card -->
     <div class="main-card">
       <div class="card-deck">
