--- a/dairy/xq/index-demo-2/index.html
+++ b/dairy/xq/index-demo-2/index.html
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Kosugi+Maru|Nunito" rel="stylesheet">
   <link rel="stylesheet" href="./lib/bootstrap.min.css">
   <link rel="stylesheet" href="./lib/fontawesome-free-5.8.1-web/css/all.css">
+  <link rel="stylesheet" href="./lib/animate.css">
   <!-- CSS -->
   <link rel="stylesheet" href="./css/common.css">
   <link rel="stylesheet" href="./css/header.css">
@@ -132,6 +133,26 @@
       </div>
     </div>
 
+    <!-- section -->
+    <section id="index--recruit--btm">
+      <div class="bg">
+        <div class="content-inner-y">
+          <div class="container color-white">
+            <div class="section-box row justify-content-center align-items-center">
+              <div class="section-text col-xl-5 col-lg-6 col-md-8">
+                <h4 class="mb20">会社説明会（新卒）</h4>
+                <p>会社説明会を開催しております。<br>選考を希望される方も、まずは会社説明会にご参加願います。<br class="d-none d-md-block">選考は説明会以降随時行っております。</p>
+              </div>
+              <div class="btn-box col-xl-2 col-md-4">
+                <div class="btn-wrap">
+                  <a class="btn btn-skew skew-white">View more</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- new cards -->
     <div class="cards">
       <div class="card-title">
@@ -141,43 +162,68 @@
       </div>
       <div class="card-inner">
         <div class="card-list">
-          <div class="card-item">
-            <img src="./imgs/business/business-agency-team-working-on-new-ideas-1080x720.jpg" alt="">
+          <div class="wow slideInUp card-item">
+            <img class="item-img" src="./imgs/business/business-agency-team-working-on-new-ideas-1080x720.jpg" alt="">
+            <div class="mask">
+              <a href="#" class="btn-mask">MORE</a>
+            </div>
             <div class="card-box">
               <div class="box-title">由布院つばめ舎（湯布院）</div>
               <span class="works-tag">Web広告施策</span>
             </div>
           </div>
-          <div class="card-item">
-            <img src="./imgs/business/business-agency-team-working-on-new-ideas-1080x720.jpg" alt="">
+          <div class="wow slideInUp card-item">
+            <img class="item-img"
+              src="./imgs/business/business-copywriter-typing-on-his-modern-laptop_free_stock_photos_picjumbo_DSC06843_free_stock_photos_picjumbo_com-1080x720.jpg"
+              alt="">
+            <div class="mask">
+              <a href="#" class="btn-mask">MORE</a>
+            </div>
             <div class="card-box">
               <div class="box-title">由布院つばめ舎（湯布院）</div>
               <span class="works-tag">Web広告施策</span>
             </div>
           </div>
-          <div class="card-item">
-            <img src="./imgs/business/business-agency-team-working-on-new-ideas-1080x720.jpg" alt="">
+          <div class="wow slideInUp card-item">
+            <img class="item-img" src="./imgs/business/business-woman-working-on-laptop-in-her-office-1080x720.jpg"
+              alt="">
+            <div class="mask">
+              <a href="#" class="btn-mask">MORE</a>
+            </div>
             <div class="card-box">
               <div class="box-title">由布院つばめ舎（湯布院）</div>
               <span class="works-tag">Web広告施策是是是是是是所所所所所所所所搜索 搜索 </span>
             </div>
           </div>
-          <div class="card-item">
-            <img src="./imgs/business/business-agency-team-working-on-new-ideas-1080x720.jpg" alt="">
+          <div class="wow slideInUp card-item" data-wow-delay="0.25s">
+            <img class="item-img"
+              src="./imgs/business/luxury-silver-pen-with-a-business-diary_free_stock_photos_picjumbo_IMG_3242-1080x720.jpg"
+              alt="">
+            <div class="mask">
+              <a href="#" class="btn-mask">MORE</a>
+            </div>
             <div class="card-box">
               <div class="box-title">由布院つばめ舎（湯布院）</div>
               <span class="works-tag">Web広告施策</span>
             </div>
           </div>
-          <div class="card-item">
-            <img src="./imgs/business/business-agency-team-working-on-new-ideas-1080x720.jpg" alt="">
+          <div class="wow slideInUp card-item" data-wow-delay="0.25s">
+            <img class="item-img"
+              src="./imgs/business/sketching-startup-website-ideas-on-paper_free_stock_photos_picjumbo_HNCK4890-1080x720.jpg"
+              alt="">
+            <div class="mask">
+              <a href="#" class="btn-mask">MORE</a>
+            </div>
             <div class="card-box">
               <div class="box-title">由布院つばめ舎（湯布院）</div>
               <span class="works-tag">Web広告施策</span>
             </div>
           </div>
-          <div class="card-item">
-            <img src="./imgs/business/business-agency-team-working-on-new-ideas-1080x720.jpg" alt="">
+          <div class="wow slideInUp card-item" data-wow-delay="0.25s">
+            <img class="item-img" src="./imgs/business/business-free-stock-photo-1080x720.jpg" alt="">
+            <div class="mask">
+              <a href="#" class="btn-mask">MORE</a>
+            </div>
             <div class="card-box">
               <div class="box-title">由布院つばめ舎（湯布院）</div>
               <span class="works-tag">Web広告施策</span>
@@ -185,124 +231,33 @@
           </div>
         </div>
       </div>
-      <!-- <div class="card-inner">
-        <ul class="card-list">
-          <li class="card-item"></li>
-          <li class="card-item"></li>
-          <li class="card-item"></li>
-          <li class="card-item"></li>
-          <li class="card-item"></li>
-          <li class="card-item"></li>
-        </ul>
-      </div> -->
     </div>
 
-    <!-- Card -->
-    <div class="main-card">
-      <div class="card-deck">
-        <div class="card">
-          <img class="card-img-top" src="./imgs/card-1.jpg" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">会社概要-Company Profile</h5>
-            <p class="card-text">弊社のご紹介</p>
-          </div>
-          <div class="card-footer">
-            <button type="button" class="btn btn-outline-primary btn-sm">詳しくはこちら</button>
-          </div>
-        </div>
-        <div class="card">
-          <img class="card-img-top" src="./imgs/card-2.jpg" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">
-              事業概要-Business Profile </h5>
-            <p class="card-text">
-              外国人派遣事業、ソフトウェア受託事業、コンサルタント事業など、幅広いソリューションをご提供いたします。 </p>
-          </div>
-          <div class="card-footer">
-            <button type="button" class="btn btn-outline-primary btn-sm">詳しくはこちら</button>
-          </div>
-        </div>
-        <div class="card">
-          <img class="card-img-top" src="./imgs/card-3.jpg" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">
-              採用情報-Recruitment </h5>
-            <p class="card-text">
-              エンジニアおよび一般職の募集をしております。事業拡大に伴い、新卒・第二新卒・中途採用にも力を入れて採用しています。 </p>
-          </div>
-          <div class="card-footer">
-            <button type="button" class="btn btn-outline-primary btn-sm">詳しくはこちら</button>
-          </div>
-        </div>
-        <div class="card">
-          <img class="card-img-top" src="./imgs/card-4.jpg" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">生体認証-Recruitment</h5>
-            <p class="card-text">高度な認証をデジタルの世界の入口に構築することで、「誰もが安心してデジタルの利便性を最大活用できる社会」を実現していきます。</p>
-          </div>
-          <div class="card-footer">
-            <button type="button" class="btn btn-outline-primary btn-sm">詳しくはこちら</button>
-          </div>
-        </div>
-      </div>
-    </div>
 
-    <!-- new -->
-    <!-- News -->
-    <div class="news-content">
-      <div class="row justify-content-md-center">
-        <div class="news col-12 col-md-10">
-          <p>
-            <hr>
-          </p>
-          <ul class="list-group">
-            <li class="list-group-item">
-              <span class="badge badge-pill badge-primary">お知らせ</span>
-              <span>2019年1月29日</span>
-              <img src="./imgs/r.svg" alt="">
-              <a href="#">(日本語) サイトリニューアルしました</a>
-            </li>
-            <li class="list-group-item">
-              <span class="badge badge-pill badge-secondary">お知らせ</span>
-              <span>2019年2月4日</span>
-              <img src="./imgs/r.svg" alt="">
-              <a href="#">10連休始まる 高速道路や新幹線など混雑</a>
-            </li>
-            <li class="list-group-item">
-              <span class="badge badge-pill badge-danger">お知らせ</span>
-              <span>2019年2月24日</span>
-              <img src="./imgs/r.svg" alt="">
-              <a href="#">スリランカ テロ事件の捜索で銃撃戦に 15人死亡</a>
-            </li>
-            <li class="list-group-item">
-              <span class="badge badge-pill badge-primary">お知らせ</span>
-              <span>2019年3月29日</span>
-              <img src="./imgs/r.svg" alt="">
-              <a href="#">両陛下とパラリンピック 障害者スポーツ普及・発展に心寄せる</a>
-            </li>
-            <li class="list-group-item">
-              <span class="badge badge-pill badge-danger">お知らせ</span>
-              <span>2019年4月15日</span>
-              <img src="./imgs/r.svg" alt="">
-              <a href="#">米ＣＩＡがインスタグラム開設で話題</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.bootcss.com/popper.js/1.12.9/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
-  </script>
-  <!-- init -->
-  <script src="./js/main.js"></script>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.bootcss.com/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+    </script>
+    <script src="http://cdn.dowebok.com/131/js/wow.min.js"></script>
+    <script>
+      // 页面滚动动画
+      var wow = new WOW({
+        boxClass: 'wow',
+        animateClass: 'animated',
+        offset: 0,
+        mobile: true,
+        live: true
+      });
+      wow.init();
+    </script>
+    <!-- init -->
+    <script src="./js/main.js"></script>
 </body>
+
 </html>
