--- a/dairy/xq/index-demo-2/index.html
+++ b/dairy/xq/index-demo-2/index.html
@@ -153,7 +153,8 @@
         </div>
       </div>
     </section>
-    <!-- new cards -->
+
+    <!-- Work -->
     <div class="cards">
       <div class="card-title">
         <h1>OUR WORKS</h1>
@@ -233,6 +234,85 @@
       </div>
     </div>
 
+    <!-- footer -->
+    <footer class="footer bg-dark-blue">
+      <div class="rel outer mxa x">
+        <section class="container mxa x rel" style="max-width:1360px;">
+          <a href="/" class="footer__logo c-white">
+            <h1>Bizplus</h1>
+          </a>
+          <div class="footer__wrapper">
+            <ul class="footer__links c-white ">
+              <li>
+                <h6 class="caps">Shop</h6>
+                <ul class="footer__sublinks">
+                  <li><a href="/paint/wall" class="h6">Wall Paint</a></li>
+                  <li><a href="/paint/trim" class="h6">Trim Paint</a></li>
+                  <li><a href="/paint/supplies/ceiling-paint" class="h6">Ceiling Paint</a></li>
+                  <li><a href="/paint/supplies/primer" class="h6">Primer</a></li>
+                  <li><a href="/paint/supplies" class="h6">Supplies</a></li>
+                </ul>
+              </li>
+              <li>
+                <h6 class="caps">Explore</h6>
+                <ul class="footer__sublinks">
+                  <li><a href="/clare-color-genius" class="h6">Clare Color Genius</a></li>
+                  <li><a href="/paint-calculator" class="h6">Paint Calculator</a></li>
+                  <li><a href="/blog" class="h6">The Blog</a></li>
+                  <li><a href="/blog/paint-tips" class="h6">Paint 101</a></li>
+                  <li><a href="/reviews" class="h6">Reviews</a></li>
+                </ul>
+              </li>
+              <li>
+                <h6 class="caps">Account</h6>
+                <ul class="footer__sublinks">
+                  <li><a href="/account" class="h6">Manage Account</a></li>
+                  <li><a href="/my-colors" class="h6">My Colors</a></li>
+                  <li><a href="/referral" class="h6">Refer a Friend</a></li>
+                </ul>
+              </li>
+              <li>
+                <h6 class="caps">Support</h6>
+                <ul class="footer__sublinks">
+                  <li><a href="/help" class="h6">FAQs</a></li>
+                  <li><a href="/financing" class="h6">Financing</a></li>
+                  <li><a href="/contact-us" class="h6">Contact Us</a></li>
+                  <li><a href="/warranty" class="h6">Warranty</a></li>
+                  <li><a href="/safety-and-product-information" class="h6">Safety Information</a></li>
+                </ul>
+              </li>
+              <li>
+                <h6 class="caps">Company</h6>
+                <ul class="footer__sublinks">
+                  <li><a href="/press" class="h6">Press</a></li>
+                  <li><a href="/about" class="h6">Our Company</a></li>
+                  <li><a href="/our-products" class="h6">Our Products</a></li>
+                  <li><a href="/careers" class="h6">Careers</a></li>
+                  <li><a href="/affiliate" class="h6">Affiliate</a></li>
+                  <li><a href="/design-trade-partner-program" class="h6">Design Trade</a></li>
+                </ul>
+              </li>
+            </ul>
+            <div class="footer__newsletter c-white x">
+              <h6 class="caps">Keep up with Clare</h6>
+              <p class="h6 my0 sans">Colorful things for your inbox.</p>
+              <div class="rel">
+                <form class="newsletter rel bg-white mt1 is-light"><label for="email"
+                    style="display:none">Email</label><input type="text" class="reader block x" aria-label="Email"
+                    id="email" name="email" placeholder="Your email" value=""><button type="submit"
+                    class="abs top right bottom z2"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"
+                      width="14" height="14" fill="none" stroke="currentcolor" stroke-width="2"
+                      style="display:inline-block;vertical-align:middle;overflow:visible">
+                      <path d="M0 8 L15 8"></path>
+                      <path d="M7.707106781186548 0.7071067811865475 L15 8 L7.707106781186548 15.292893218813452">
+                      </path>
+                    </svg></button></form>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+    </footer>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
