--- a/demo/index.html
+++ b/demo/index.html
@@ -8,7 +8,7 @@
   <!-- normalize -->
   <link rel="stylesheet" href="./css/normalize.css">
   <!-- out CSS and font -->
-  <link href="https://fonts.googleapis.com/css?family=Kosugi+Maru|Nunito" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Kosugi+Maru|Nunito|Roboto" rel="stylesheet">
   <link rel="stylesheet" href="./lib/bootstrap.min.css">
   <link rel="stylesheet" href="./lib/fontawesome-free-5.8.1-web/css/all.css">
   <link rel="stylesheet" href="./lib/animate.css">
@@ -33,31 +33,31 @@
       </div>
       <div class="nav-menu ">
         <div class="navbar">
-          <div class="menu-item">Home</div>
-          <div class="menu-item">
+          <div class="menu-item caps">Home</div>
+          <div class="menu-item caps">
             <span>Information
               <i class="fas fa-angle-down svg-down"></i>
             </span>
           </div>
-          <div class="menu-item">
+          <div class="menu-item caps">
             <span>Profile
               <i class="fas fa-angle-down svg-down"></i>
             </span>
           </div>
-          <div class="menu-item">
+          <div class="menu-item caps">
             <span>Benefit
               <i class="fas fa-angle-down svg-down"></i>
             </span>
           </div>
-          <div class="menu-item">Recruitment</div>
-          <div class="menu-item">About</div>
+          <div class="menu-item caps">Recruitment</div>
+          <div class="menu-item caps">About</div>
         </div>
       </div>
       <div class="nav-right ">
         <div class="nav-search" style="margin-right: 15px;">
           <i class="fas fa-search"></i>
         </div>
-        <div class="nav-lan">
+        <div class="nav-lan ">
           <span style="padding: 0; margin-right: 5px;">English</span>
           <i class="fas fa-angle-down svg-down"></i>
         </div>
@@ -129,7 +129,7 @@
             <b>QUALITY</b>
           </div>
         </div>
-        <button>LEARN MORE</button>
+        <button class="btn-dark-blue caps">LEARN MORe</button>
       </div>
     </div>
 
@@ -154,76 +154,146 @@
       </div>
     </section>
 
+    <!-- serve -->
     <!-- Work -->
     <div class="cards">
       <div class="card-title">
-        <h1>OUR WORKS</h1>
+        <h1 class="caps">our services</h1>
+        <i>Lorem, Et voluptas molestias consequatur laboriosam, illum itaque id.</i>
+        <hr>
+      </div>
+      <div class="serve fc">
+        <div class="serve-inner f">
+          <div class="serve-item ">
+            <div class="item-content">
+              <div class="ofh">
+                <img src="./imgs/business/business-office-building-1080x720.jpg" alt="">
+              </div>
+              <div class="item-text">
+                <h3 class="caps"><a href="#" class="clear-a">voluptas</a></h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga cum asperiores commodi recusandae
+                  inventore in nesciunt, rerum odit est voluptatum molestiae officiis magnam deleniti ut esse. Nobis
+                  autem sunt natus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur fugiat
+                  doloribus, porro nihil
+                  eveniet tem!</p>
+              </div>
+            </div>
+          </div>
+          <div class="serve-item">
+            <div class="item-content">
+              <div class="ofh"><img src="./imgs//business/team-leader-writing-on-white-board-1080x720.jpg" alt="">
+              </div>
+              <div class="item-text">
+                <h3 class="caps"><a href="#" class="clear-a">voluptas</a></h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur fugiat doloribus, porro nihil
+                  eveniet tem!</p>
+              </div>
+            </div>
+          </div>
+          <div class="serve-item">
+            <div class="item-content">
+              <div class="ofh"><img src="./imgs//business/credit-card-terminal-1080x720.jpg" alt="">
+              </div>
+              <div class="item-text">
+                <h3 class="caps"><a href="#" class="clear-a">voluptas</a></h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur fugiat doloribus, porro nihil
+                  eveniet tem!</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="fc">
+        <div><button class="btn-dark-blue caps">learn more</button></div>
+      </div>
+    </div>
+    <!-- Work -->
+    <div class="cards">
+      <div class="card-title">
+        <h1 class="caps">our works</h1>
         <i>新着制作実績</i>
         <hr>
       </div>
       <div class="card-inner">
         <div class="card-list">
-          <div class="wow slideInUp card-item">
-            <img class="item-img" src="./imgs/business/business-agency-team-working-on-new-ideas-1080x720.jpg" alt="">
-            <div class="mask">
-              <a href="#" class="btn-mask">MORE</a>
+          <div class="card-item">
+            <div class="item-img">
+              <img
+                src="./imgs/business/business-copywriter-typing-on-his-modern-laptop_free_stock_photos_picjumbo_DSC06843_free_stock_photos_picjumbo_com-1080x720.jpg"
+                alt="1">
+              <div class="mask">
+                <a href="#" class="btn-mask">MORE</a>
+              </div>
             </div>
             <div class="card-box">
               <div class="box-title">由布院つばめ舎（湯布院）</div>
               <span class="works-tag">Web広告施策</span>
             </div>
           </div>
-          <div class="wow slideInUp card-item">
-            <img class="item-img"
-              src="./imgs/business/business-copywriter-typing-on-his-modern-laptop_free_stock_photos_picjumbo_DSC06843_free_stock_photos_picjumbo_com-1080x720.jpg"
-              alt="">
-            <div class="mask">
-              <a href="#" class="btn-mask">MORE</a>
+          <div class="card-item">
+            <div class="item-img ">
+              <img
+                src="./imgs/business/business-woman-working-on-laptop-in-her-office-1080x720.jpg"
+                alt="2">
+              <div class="mask">
+                <a href="#" class="btn-mask">MORE</a>
+              </div>
             </div>
             <div class="card-box">
               <div class="box-title">由布院つばめ舎（湯布院）</div>
               <span class="works-tag">Web広告施策</span>
             </div>
           </div>
-          <div class="wow slideInUp card-item">
-            <img class="item-img" src="./imgs/business/business-woman-working-on-laptop-in-her-office-1080x720.jpg"
-              alt="">
-            <div class="mask">
-              <a href="#" class="btn-mask">MORE</a>
+          <div class="card-item">
+            <div class="item-img">
+              <img
+                src="./imgs/business/coffee-laptop-business-work-still-life-1080x720.jpg"
+                alt="3">
+              <div class="mask">
+                <a href="#" class="btn-mask">MORE</a>
+              </div>
             </div>
             <div class="card-box">
               <div class="box-title">由布院つばめ舎（湯布院）</div>
               <span class="works-tag">Web広告施策是是是是是是所所所所所所所所搜索 搜索 </span>
             </div>
           </div>
-          <div class="wow slideInUp card-item" data-wow-delay="0.25s">
-            <img class="item-img"
-              src="./imgs/business/luxury-silver-pen-with-a-business-diary_free_stock_photos_picjumbo_IMG_3242-1080x720.jpg"
-              alt="">
-            <div class="mask">
-              <a href="#" class="btn-mask">MORE</a>
+          <div class="card-item">
+            <div class="item-img">
+              <img
+                src="./imgs/business/team-leader-writing-on-white-board-1080x720.jpg"
+                alt="4">
+              <div class="mask-light">
+                <a href="#" class="btn-mask">MORE</a>
+              </div>
             </div>
             <div class="card-box">
               <div class="box-title">由布院つばめ舎（湯布院）</div>
               <span class="works-tag">Web広告施策</span>
             </div>
           </div>
-          <div class="wow slideInUp card-item" data-wow-delay="0.25s">
-            <img class="item-img"
-              src="./imgs/business/sketching-startup-website-ideas-on-paper_free_stock_photos_picjumbo_HNCK4890-1080x720.jpg"
-              alt="">
-            <div class="mask">
-              <a href="#" class="btn-mask">MORE</a>
+          <div class="card-item">
+            <div class="item-img">
+              <img
+                src="./imgs/business/business-free-stock-photo-1080x720.jpg"
+                alt="5">
+              <div class="mask-light">
+                <a href="#" class="btn-mask">MORE</a>
+              </div>
             </div>
             <div class="card-box">
               <div class="box-title">由布院つばめ舎（湯布院）</div>
               <span class="works-tag">Web広告施策</span>
             </div>
           </div>
-          <div class="wow slideInUp card-item" data-wow-delay="0.25s">
-            <img class="item-img" src="./imgs/business/business-free-stock-photo-1080x720.jpg" alt="">
-            <div class="mask">
-              <a href="#" class="btn-mask">MORE</a>
+          <div class="card-item">
+            <div class="item-img">
+              <img
+                src="./imgs/business/business-agency-team-working-on-new-ideas-1080x720.jpg"
+                alt="6">
+              <div class="mask-light">
+                <a href="#" class="btn-mask">MORE</a>
+              </div>
             </div>
             <div class="card-box">
               <div class="box-title">由布院つばめ舎（湯布院）</div>
@@ -231,6 +301,9 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="fc">
+        <div><button class="btn-dark-blue caps">learn more</button></div>
       </div>
     </div>
 
@@ -246,74 +319,103 @@
               <li>
                 <h6 class="caps">Shop</h6>
                 <ul class="footer__sublinks">
-                  <li><a href="/paint/wall" class="h6">Wall Paint</a></li>
-                  <li><a href="/paint/trim" class="h6">Trim Paint</a></li>
-                  <li><a href="/paint/supplies/ceiling-paint" class="h6">Ceiling Paint</a></li>
-                  <li><a href="/paint/supplies/primer" class="h6">Primer</a></li>
-                  <li><a href="/paint/supplies" class="h6">Supplies</a></li>
+                  <li><a href="#" class="h6">Wall Paint</a></li>
+                  <li><a href="#" class="h6">Trim Paint</a></li>
+                  <li><a href="#" class="h6">Ceiling Paint</a></li>
+                  <li><a href="#" class="h6">Primer</a></li>
+                  <li><a href="#" class="h6">Supplies</a></li>
                 </ul>
               </li>
               <li>
                 <h6 class="caps">Explore</h6>
                 <ul class="footer__sublinks">
-                  <li><a href="/clare-color-genius" class="h6">Clare Color Genius</a></li>
-                  <li><a href="/paint-calculator" class="h6">Paint Calculator</a></li>
-                  <li><a href="/blog" class="h6">The Blog</a></li>
-                  <li><a href="/blog/paint-tips" class="h6">Paint 101</a></li>
-                  <li><a href="/reviews" class="h6">Reviews</a></li>
+                  <li><a href="#" class="h6">Clare Color Genius</a></li>
+                  <li><a href="#" class="h6">Paint Calculator</a></li>
+                  <li><a href="#" class="h6">The Blog</a></li>
+                  <li><a href="#" class="h6">Paint 101</a></li>
+                  <li><a href="#" class="h6">Reviews</a></li>
                 </ul>
               </li>
               <li>
                 <h6 class="caps">Account</h6>
                 <ul class="footer__sublinks">
-                  <li><a href="/account" class="h6">Manage Account</a></li>
-                  <li><a href="/my-colors" class="h6">My Colors</a></li>
-                  <li><a href="/referral" class="h6">Refer a Friend</a></li>
+                  <li><a href="#" class="h6">Manage Account</a></li>
+                  <li><a href="#" class="h6">My Colors</a></li>
+                  <li><a href="#" class="h6">Refer a Friend</a></li>
                 </ul>
               </li>
               <li>
                 <h6 class="caps">Support</h6>
                 <ul class="footer__sublinks">
-                  <li><a href="/help" class="h6">FAQs</a></li>
-                  <li><a href="/financing" class="h6">Financing</a></li>
-                  <li><a href="/contact-us" class="h6">Contact Us</a></li>
-                  <li><a href="/warranty" class="h6">Warranty</a></li>
-                  <li><a href="/safety-and-product-information" class="h6">Safety Information</a></li>
+                  <li><a href="#" class="h6">FAQs</a></li>
+                  <li><a href="#" class="h6">Financing</a></li>
+                  <li><a href="#" class="h6">Contact Us</a></li>
+                  <li><a href="#" class="h6">Warranty</a></li>
+                  <li><a href="#" class="h6">Safety Information</a></li>
                 </ul>
               </li>
               <li>
                 <h6 class="caps">Company</h6>
                 <ul class="footer__sublinks">
-                  <li><a href="/press" class="h6">Press</a></li>
-                  <li><a href="/about" class="h6">Our Company</a></li>
-                  <li><a href="/our-products" class="h6">Our Products</a></li>
-                  <li><a href="/careers" class="h6">Careers</a></li>
-                  <li><a href="/affiliate" class="h6">Affiliate</a></li>
-                  <li><a href="/design-trade-partner-program" class="h6">Design Trade</a></li>
+                  <li><a href="#" class="h6">Press</a></li>
+                  <li><a href="#" class="h6">Our Company</a></li>
+                  <li><a href="#" class="h6">Our Products</a></li>
+                  <li><a href="#" class="h6">Careers</a></li>
+                  <li><a href="#" class="h6">Affiliate</a></li>
+                  <li><a href="#" class="h6">Design Trade</a></li>
                 </ul>
               </li>
             </ul>
             <div class="footer__newsletter c-white x">
-              <h6 class="caps">Keep up with Clare</h6>
-              <p class="h6 my0 sans">Colorful things for your inbox.</p>
+              <h6 class="caps">Keep up with Bizplus</h6>
+              <p class="h6 my0 sans">A Plus For Your Business.</p>
               <div class="rel">
-                <form class="newsletter rel bg-white mt1 is-light"><label for="email"
-                    style="display:none">Email</label><input type="text" class="reader block x" aria-label="Email"
-                    id="email" name="email" placeholder="Your email" value=""><button type="submit"
-                    class="abs top right bottom z2"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"
-                      width="14" height="14" fill="none" stroke="currentcolor" stroke-width="2"
-                      style="display:inline-block;vertical-align:middle;overflow:visible">
-                      <path d="M0 8 L15 8"></path>
-                      <path d="M7.707106781186548 0.7071067811865475 L15 8 L7.707106781186548 15.292893218813452">
-                      </path>
-                    </svg></button></form>
+                <form class="newsletter rel bg-dark-blue mt1 is-light">
+                  <label for="email" style="display:none">Email
+                  </label>
+                  <input type="text" class="reader x" aria-label="Email" id="email" name="email"
+                    placeholder="Your email" value="">
+                  <button type="submit" class="abs top right bottom fade-out ">
+                    <i class="fas fa-arrow-right"></i>
+                  </button>
+                </form>
               </div>
             </div>
           </div>
         </section>
       </div>
     </footer>
-
+    <footer class="colophon bg-darkest-blue rel ">
+      <div class="rel outer mxa x">
+        <section class="container mxa x rel" style="max-width:1360px">
+          <div class="colophon__wrapper f fw jcb x">
+            <ul class="colophon__social f aic jcc x c-white">
+              <li><a class="fade-out" href="https://facebook.com/clarepaint" target="_blank">
+                  <i class="fab fa-line"></i>
+                </a>
+              </li>
+              <li><a class="fade-out" href="https://twitter.com/clarepaint" target="_blank">
+                  <i class="fab fa-twitter-square"></i>
+                </a></li>
+              <li><a class="fade-out" href="https://instagram.com/clarepaint" target="_blank"><i
+                    class="fab fa-facebook-square"></i></a>
+              </li>
+              <li><a class="fade-out" href="https://pinterest.com/clare_paint" target="_blank"><i
+                    class="fab fa-weixin"></i></a></li>
+            </ul>
+            <ul class="colophon__links f aic jcc fw h6 c-white x ac">
+              <li><span>©
+                  <!-- -->2019
+                  <!-- --> Clare, Inc.</span></li>
+              <li>
+                <a href="/" class="fade-out"> Terms &amp; HZNU</a></li>
+              <li>
+                <a href="/" class="fade-out"> Design by XQ.</a></li>
+            </ul>
+          </div>
+        </section>
+      </div>
+    </footer>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous">
@@ -323,18 +425,6 @@
     </script>
     <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
-    </script>
-    <script src="http://cdn.dowebok.com/131/js/wow.min.js"></script>
-    <script>
-      // 页面滚动动画
-      var wow = new WOW({
-        boxClass: 'wow',
-        animateClass: 'animated',
-        offset: 0,
-        mobile: true,
-        live: true
-      });
-      wow.init();
     </script>
     <!-- init -->
     <script src="./js/main.js"></script>
