--- a/demo/index.html
+++ b/demo/index.html
@@ -93,10 +93,10 @@
           <input type="text" placeholder="input here">
           <div class=""><button id="btn-search"><i class="fas fa-search"></i></button></div>
         </div>
-        <div class="nav-lan ">
-          <span>
+        <div class="nav-lan">
+          <div>
             English&nbsp;<i class="fas fa-angle-down svg-down"></i>
-          </span>
+          </div>
           <ul class="lan-select">
             <li><a href="#">日本語</a></li>
             <li><a href="#">English</a></li>
