修复i18n文件名

--- a/demo/index.html
+++ b/demo/index.html
@@ -40,7 +40,7 @@
       </div>
       <div class="nav-menu ">
         <div class="navbar">
-          <div class="menu-item caps" i="homepage">
+          <div class="menu-item caps" data-i18n-text="homepage">
             Home
           </div>
           <div class="menu-item caps expand">
