--- a/demo/index.html
+++ b/demo/index.html
@@ -518,10 +518,9 @@
             </div>
           </a>
         </li>
-
       </ul>
       <div class="fc">
-        <div><button class="btn-dark-blue caps" ></button></div>
+        <div><button class="btn-dark-blue caps" data-i18n-text="learn_more"></button></div>
       </div>
     </div>
     <!-- event/blog 公司文化 -->
